[package]
name = "visualizer"
version = "0.1.0"
authors = ["Steven Cohen <peragwin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { path = "../../../software/amethyst", features = ["vulkan"] }
audio = { path = "../audio" }
clap = "3.0.0-beta.2"
itertools = "0.10.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_yaml = "0.8.14"
